# AGENTR

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.console  README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml  deploy-railway.yml  deploy-render.yml  naver-auto-reply.yml
app/: __init__.py
app/agents/: __init__.py
app/analytics/: fallback_insights.py
app/api/: main.py
app/core/: config.py  fallback_codes.py  observability.py
app/rag/: __init__.py  faq_paraphraser.py  faq_seed_expander.py  ingest.py  retriever.py
app/repositories/: __init__.py  supabase_repo.py
app/services/: classifier.py  embedding_provider.py  llm_provider.py
console/: __init__.py  streamlit_app.py
docs/: cafe24-faq-widget.md  gold-data-review-checklist.md  infra-runbook.md  naver-smartstore-api.md  public-demo-playbook.md  release-checklist.md
railway/: api.railway.toml  console.railway.toml
scripts/: check_schema.py  demo_public.sh  naver_auto_reply_drain.sh  naver_auto_reply_realtime.sh  smoke_e2e.sh  start_api.sh  start_console.sh
supabase/: schema.sql
supabase/migrations/: 0001_baseline.sql  0002_fallback_columns.sql  (+1 more)
tests/: test_classifier_confidence.py  test_fallback_logging.py  test_faq_paraphraser.py  test_gold_data_targets.py  test_infra_config.py  test_infra_ready.py  test_infra_sentry_test_route.py  test_ingest_sections.py  test_leads_route.py  test_llm_provider.py  test_naver_client.py  test_shipping_client.py  test_static_widget_route.py  test_tools_naver_routes.py  test_tracking_progress_mapping.py
(+36 files in other folders)
