[project]
name = "shop-ai"
version = "0.1.0"
description = "Revenue-focused ecommerce CS agent MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.1",
  "requests>=2.32.0",
  "bcrypt>=4.2.0",
  "pandas>=2.2.2",
  "openai>=1.40.0",
  "streamlit>=1.36.0",
  "supabase>=2.6.0",
  "cryptography>=43.0.0",
  "sentry-sdk[fastapi]>=2.12.0",
  "psycopg[binary]>=3.2.0",
  "langchain>=0.2.10",
  "langchain-openai>=0.1.17",
  "langchain-google-genai>=2.0.0",
  "langchain-pinecone>=0.1.2",
  "langchain-text-splitters>=0.2.2",
  "pinecone>=5.0.1",
  "langgraph>=0.2.3",
  "crewai>=0.55.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "console*"]
